--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="script.js"></script>
     <header>
         <img class="logotipo" src="imagens/logo.webp" alt="logotipo">
     </header>
